[workspace]
resolver = "2"
members = ["muxtls-proto", "muxtls"]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["shellrow <shellrow@foctal.com>"]

[workspace.dependencies]
bytes = "1"
socket2 = "0.6"
tokio = { version = "1", features = ["rt", "sync", "macros", "net", "io-util", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.8"
rustls-platform-verifier = "0.6"
rcgen = "0.14"
rustls-pemfile = "2.2"
futures-util = { version = "0.3", features = ["sink"] }
futures-core = "0.3"
futures-sink = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
thiserror = "2"
muxtls-proto = { path = "muxtls-proto" }
